--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 					<!-- Conteneur compétence en Office -->
 					<div class="Office">
-						<span>Office :</span>
+						<span>Suite Office :</span>
 
 						<!-- Liste stockant la barre de progressions dans la suite Office-->
 						<ul class= "Jauge">
@@ -231,7 +231,7 @@
 
 					<!-- Conteneur compétence Adobe -->
 					<div class="Adobe">
-						<span>Adobe :</span>
+						<span>Suite Adobe :</span>
 
 						<!-- Liste stockant la barre de progressions dans la suite Adobe-->
 						<ul class= "Jauge">
@@ -241,7 +241,7 @@
 
 					<!-- Conteneur compétence Java -->
 					<div class="Java">
-						<span>Java :</span>
+						<span>Code Java :</span>
 
 						<!-- Liste stockant la barre de progressions en Java-->
 						<ul class= "Jauge">
@@ -250,7 +250,7 @@
 					</div>
 
 					<div class="Python">
-						<span>Python :</span>
+						<span>Code Python :</span>
 
 						<!-- Liste stockant la barre de progressions en Python-->
 						<ul class= "Jauge">
@@ -268,17 +268,6 @@
 
 				<!-- Conteneur stockant l'ensemble des barres de progression -->
 				<div class="Progression">
-
-					<!-- Conteneur compétence Français -->
-					<div class="Francais">
-						<span>Français :</span>
-
-						<!-- Liste stockant la barre de progressions de français-->
-						<ul class= "Jauge">
-							<li class='Complet'/><li class='Complet'/><li class='Complet'/><li class='Complet'/><li class='Moitier'/>
-						</ul>
-
-					</div>
 
 					<!-- Conteneur compétence Anglais -->
 					<div class="Anglais">
