--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 
 	<!-- Déclaration des métadonnées -->
 	<head>
+
+		<!-- Encode la page en utf-8 acceptant les accents -->
 		<meta charset="utf-8">
+
+		<!-- Détermine le titre du site -->
 		<title>CV - Lilian BAUDRY</title>
+
+		<!-- Indique la Favicon a utiliser: -->
 		<link rel="icon" href="Ressources/Icone.png" />
+
+		<!-- Lie le document CSS -->
 		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<!-- Se connecte a la base de donnée de font fontawesome -->
 		<script src="https://kit.fontawesome.com/acc08590fe.js" crossorigin="anonymous"></script>
 	</head>
 
@@ -47,7 +57,7 @@
 
 				<!-- Paragraphe Naissance -->
 				<p>
-					<i class="fas fa-calendar-day"></i> 07 / 07 / 2003
+					<i class="fas fa-calendar-day"></i>07 / 07 / 2003
 				</p>
 
 				<!-- Paragraphe adresse -->
