--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 				<!-- Paragraphe adresse -->
 				<p>
-					<i class="fas fa-home"></i>84 rue du 1er mars 1943, Villeurbanne
+					<a href="https://www.google.fr/maps/place/84+Rue+du+1er+Mars+1943"><i class="fas fa-home"></i>84 rue du 1er mars 1943, Villeurbanne</a>
 				</p>
 			</address>
 
