--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<!-- Détermine le titre du site -->
 		<title>CV - Lilian BAUDRY</title>
 
-		<!-- Indique la Favicon a utiliser: -->
+		<!-- Indique la Favicon à utiliser: -->
 		<link rel="icon" href="Ressources/Icone.png" />
 
 		<!-- Lie le document CSS -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 
-		<!-- Se connecte a la base de donnée de font fontawesome -->
+		<!-- Se connecte à la base de données de fontawesome -->
 		<script src="https://kit.fontawesome.com/acc08590fe.js" crossorigin="anonymous"></script>
 	</head>
 
@@ -71,7 +71,7 @@
 			<article class="Profil">
 				<hr data-content = "Profil">
 				<p>
-					Je suis un jeune étudiant de 18 ans passionné d’informatique depuis le plus jeune âge.
+					Je suis un étudiant de 18 ans passionné d’informatique depuis le plus jeune âge.
 				</p>
 				<p>
 					Je cherche à acquérir de nouvelles compétences tout en découvrant le fonctionnement du milieu professionnel et des projets collaboratifs.
@@ -79,19 +79,19 @@
 			</article>
 		</aside>
 
-		<!-- Section du contenu principale -->
+		<!-- Section du contenu principal -->
 
 		<section id = "Contenu">
 
 			<!-- Catégorie Expérience -->
 
 			<div class="Experience">
-				<hr data-content = "Expérience">
+				<hr data-content = "Expériences">
 
-				<!-- Article décrivant une expérience professionnel -->
+				<!-- Article décrivant une expérience professionnelle -->
 				<article class="Paysagiste">
 					<p>Juillet 2021</p>
-					<h2>Expérience professionnel en temps que paysagiste</h2>
+					<h2>Expérience professionnelle en temps que paysagiste</h2>
 
 					<!-- Liste des compétences apportées -->
 					<ul>
@@ -107,9 +107,9 @@
 
 					<!-- Liste des compétences apportées -->
 					<ul>
-						<li>Conception de models multi-physiques</li>
+						<li>Conception de modèles multi-physiques</li>
 						<li>Initiation à la métrologie</li>
-						<li>Gestion de projet de groupe</li>
+						<li>Gestion de projets de groupe</li>
 					</ul>
 				</article>
 
@@ -120,8 +120,8 @@
 
 					<!-- Liste des compétences apportées -->
 					<ul>
-						<li>Création d’un outil de gestion et d’administration scolaire.</li>
-						<li>Utilisation de librairies et d’interfaces de programmation.</li>
+						<li>Création d’un outil de gestion et d’administration scolaire</li>
+						<li>Utilisation de librairies et d’interfaces de programmation</li>
 					</ul>
 				</article>
 
@@ -154,13 +154,13 @@
 				<!-- Article décrivant un stage -->
 				<article class="Stage">
 					<p>Décembre 2017</p>
-					<h2>Stage d’observation du métier d’administrateur réseaux. </h2>
+					<h2>Stage d’observation du métier d’administrateur réseaux </h2>
 
 					<!-- Liste des compétences apportées -->
 					<ul>
-						<li>Initiation aux différents langages de programmation web.</li>
-						<li>Gestion de bases de données et de protocoles de sécurité.</li>
-						<li>Théorie de Fonctionnement d’un serveur privé et public.</li>
+						<li>Initiation aux différents langages de programmation web</li>
+						<li>Gestion de bases de données et de protocoles de sécurité</li>
+						<li>Théorie de fonctionnement d’un serveur privé et public</li>
 					</ul>
 				</article>
 			</div>
@@ -173,7 +173,7 @@
 				<!-- Conteneur stockant l'ensemble des études -->
 				<div class="Etudes">
 
-					<!-- Article décrivant la formation a l'IUT -->
+					<!-- Article décrivant la formation à l'IUT -->
 					<article class="BUT">
 						<p>IUT Lyon 1 69100, Villeurbanne</p>
 						<h2>Bachelor Universitaire Technologique, Spécialité Informatique</h2>
@@ -182,9 +182,9 @@
 					<!-- Article décrivant la formation au lycée -->
 					<article class="Lycee">
 						<p>Lycée Gustave Eiffel 2100, Dijon</p>
-						<p>1ere Générale</p>
+						<p>1ère Générale</p>
 
-						<!-- Liste des spécialité -->
+						<!-- Liste des spécialités -->
 						<ul class="matieres">
 							<li>Mathématiques</li>
 							<li>Physique Chimie</li>
@@ -283,7 +283,7 @@
 					<div class="Anglais">
 						<span>Anglais :</span>
 
-						<!-- Liste stockant la barre de progressions de Anglais-->
+						<!-- Liste stockant la barre de progressions d'Anglais-->
 						<ul class= "Jauge">
 							<li class='Complet'/><li class='Complet'/><li class='Complet'/><li/><li/>
 						</ul>
@@ -293,7 +293,7 @@
 					<div class="Allemand">
 						<span>Allemand :</span>
 
-						<!-- Liste stockant la barre de progressions de d'Allemand-->
+						<!-- Liste stockant la barre de progressions d'Allemand-->
 						<ul class= "Jauge">
 							<li class='Complet'/><li/><li/><li/><li/>
 						</ul>
